--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "文章博客系统",
   "main": "index.js",
   "scripts": {
+    "start": "nodemon app",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -22,7 +23,10 @@
   "homepage": "https://github.com/SawWu/article-blog-protal#readme",
   "dependencies": {
     "koa": "^2.5.3",
-    "koa-router": "^7.4.0"
+    "koa-router": "^7.4.0",
+    "koa-static": "^5.0.0",
+    "koa-views": "^6.1.4",
+    "pug": "^2.0.3"
   },
   "devDependencies": {
     "nodemon": "^1.18.4"
